--- a/app/microservices/user/build.gradle
+++ b/app/microservices/user/build.gradle
@@ -42,10 +42,10 @@ tasks.named('test') {
 }
 
 
-test {
-	testLogging {
-		// show standard out and err for all tests
-		showStandardStreams = true
-	}
-}
+//test {
+//	testLogging {
+//		// show standard out and err for all tests
+//		showStandardStreams = true
+//	}
+//}
 
