--- a/app/microservices/order/build.gradle
+++ b/app/microservices/order/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     //testImplementation 'com.github.tomakehurst:wiremock:3.0.1'
     testImplementation 'org.wiremock.integrations:wiremock-spring-boot:3.9.0'
     implementation 'com.google.cloud.sql:postgres-socket-factory:1.25.0'
-
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8'
 
 }
 
