--- a/app/microservices/user/build.gradle
+++ b/app/microservices/user/build.gradle
@@ -34,6 +34,8 @@ dependencies {
 	runtimeOnly 'org.postgresql:postgresql'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'com.google.cloud.sql:postgres-socket-factory:1.25.0'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8'
+
 	//implementation project(':common')
 }
 
