--- a/.github/workflows/deploy-user-service.yml
+++ b/.github/workflows/deploy-user-service.yml
@@ -2,10 +2,10 @@ name: Deploy User Service to Cloud Run
 
 on:
   push:
-    branches: [ci/setup-cloud]
+    branches: [main]
     # Only run the workflow if the commit message contains "[deploy_user_service]"
   pull_request:
-    branches: [ci/setup-cloud]
+    branches: [main]
 
 
 jobs:
