--- a/app/microservices/product/build.gradle
+++ b/app/microservices/product/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	runtimeOnly 'org.postgresql:postgresql'
 	implementation 'com.google.cloud.sql:postgres-socket-factory:1.25.0'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8'
 
 	//implementation project(':common')
 
