SonarCloud added 1.0.3, deploy product service and deploy order service

--- a/.github/workflows/deploy-order-service.yml
+++ b/.github/workflows/deploy-order-service.yml
@@ -60,6 +60,14 @@ jobs:
           cd app/microservices/order
           bash gradlew test
 
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@v2
+        with:
+          projectBaseDir: app/microservices/order
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: https://sonarcloud.io
+
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
         with:
