Workflow update 1.0.3 - ingress update - GKE, deploy user service

--- a/app/k8s/ingress.yaml
+++ b/app/k8s/ingress.yaml
@@ -8,10 +8,10 @@ spec:
   rules:
     - http:
         paths:
-          - path: /user
+          - path: /users
             pathType: Prefix
             backend:
               service:
                 name: user-service
                 port:
-                  number: 80
+                  number: 8080
