--- a/app/k8s/user/deployment.yaml
+++ b/app/k8s/user/deployment.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: user-service
     spec:
+      serviceAccountName: github-actions
       containers:
         - name: user
           image: europe-west3-docker.pkg.dev/ecommerce-first-459417/microservice-repo/user-service:latest
@@ -21,7 +22,7 @@ spec:
             - containerPort: 8080
           env:
             - name: SPRING_DATASOURCE_URL
-              value: jdbc:postgresql://localhost:5432/user_service_db
+              value: jdbc:postgresql:///user_service_db?socketFactory=com.google.cloud.sql.postgres.SocketFactory&cloudSqlInstance=ecommerce-first-459417:europe-west3:microservice-instance&user=postgres&password=postgres
             - name: SPRING_DATASOURCE_USERNAME
               value: postgres
             - name: SPRING_DATASOURCE_PASSWORD
@@ -30,12 +31,12 @@ spec:
               value: http://product-service:8080
             - name: ORDER_SERVICE_URL
               value: http://order-service:8080
-      # Cloud SQL Proxy as sidecar
-      containers:
+
         - name: cloudsql-proxy
           image: gcr.io/cloudsql-docker/gce-proxy:1.33.0
           command:
             - "/cloud_sql_proxy"
-            - "-instances=ecommerce-first-459417:REGION:INSTANCE_ID=tcp:5432"
+            - "-instances=ecommerce-first-459417:europe-west3:microservice-instance=tcp:5432"
+            - "-dir=/cloudsql"
           securityContext:
             runAsNonRoot: true
