--- a/app/k8s/user/service.yaml
+++ b/app/k8s/user/service.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: user-service
+  annotations:
+    cloud.google.com/backend-config: '{"default":"user-backendconfig"}'
 spec:
   selector:
     app: user-service
@@ -10,3 +12,5 @@ spec:
       port: 8080
       targetPort: 8080
   type: ClusterIP
+
+
