--- a/app/microservices/user/src/main/resources/application.properties
+++ b/app/microservices/user/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+management.endpoints.web.exposure.include=health,info,readiness
+management.endpoint.health.probes.enabled=true
+management.health.readinessState.enabled=true
