--- a/.github/workflows/deploy-user-service.yml
+++ b/.github/workflows/deploy-user-service.yml
@@ -81,49 +81,51 @@ jobs:
       - name: Configure Docker for Artifact Registry
         run: gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev --quiet
 
+
       - name: Build & Push Docker image
         run: |
-          IMAGE_URI=${{ env.REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}
+          IMAGE_URI=${{ env.REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}:latest
           cd app
-          docker build -t "$IMAGE_URI:latest" ./microservices/user
-          docker tag "$IMAGE_URI:latest" "$IMAGE_URI:${{ github.sha }}"
-          docker push "$IMAGE_URI:latest"
-          docker push "$IMAGE_URI:${{ github.sha }}"
+          docker build -t "$IMAGE_URI" ./microservices/user
+          docker push "$IMAGE_URI"
 
-      - name: Install gke-gcloud-auth-plugin
+      - name: Deploy to Cloud Run
         run: |
-          gcloud components install gke-gcloud-auth-plugin --quiet
-
-
-      - name: Get GKE credentials
-        run: |
-          gcloud container clusters get-credentials ecommerce-cluster \
+          IMAGE_URI=${{ env.REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}:latest
+          gcloud run deploy ${{ env.IMAGE_NAME }} \
+            --image="$IMAGE_URI" \
+            --platform=managed \
             --region=${{ env.REGION }} \
-            --project=${{ secrets.GCP_PROJECT_ID }}
-
-      - name: Set image in deployment (Rolling Update)
-        run: |
-          kubectl set image deployment/user-service user=${{ env.REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+            --allow-unauthenticated \
+            --set-env-vars="SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/user_service_db?cloudSqlInstance=${{ secrets.GCP_SQL_CONNECTION_NAME }}&socketFactory=com.google.cloud.sql.postgres.SocketFactory,SPRING_DATASOURCE_USERNAME=postgres,SPRING_DATASOURCE_PASSWORD=postgres,PRODUCT_SERVICE_URL=https://product-service-716746262210.europe-west3.run.app,ORDER_SERVICE_URL=https://order-service-716746262210.europe-west3.run.app"
 
 
-
-###    The jobs to deploy to Cloud Run
+###    The jobs to deploy to GKE
 
 #      - name: Build & Push Docker image
 #        run: |
-#          IMAGE_URI=${{ env.REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}:latest
+#          IMAGE_URI=${{ env.REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}
 #          cd app
-#          docker build -t "$IMAGE_URI" ./microservices/user
-#          docker push "$IMAGE_URI"
-
-#      - name: Deploy to Cloud Run
+#          docker build -t "$IMAGE_URI:latest" ./microservices/user
+#          docker tag "$IMAGE_URI:latest" "$IMAGE_URI:${{ github.sha }}"
+#          docker push "$IMAGE_URI:latest"
+#          docker push "$IMAGE_URI:${{ github.sha }}"
+#
+#      - name: Install gke-gcloud-auth-plugin
 #        run: |
-#          IMAGE_URI=${{ env.REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}:latest
-#          gcloud run deploy ${{ env.IMAGE_NAME }} \
-#            --image="$IMAGE_URI" \
-#            --platform=managed \
+#          gcloud components install gke-gcloud-auth-plugin --quiet
+#
+#
+#      - name: Get GKE credentials
+#        run: |
+#          gcloud container clusters get-credentials ecommerce-cluster \
 #            --region=${{ env.REGION }} \
-#            --allow-unauthenticated \
-#            --set-env-vars="SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/user_service_db?cloudSqlInstance=${{ secrets.GCP_SQL_CONNECTION_NAME }}&socketFactory=com.google.cloud.sql.postgres.SocketFactory,SPRING_DATASOURCE_USERNAME=postgres,SPRING_DATASOURCE_PASSWORD=postgres,PRODUCT_SERVICE_URL=https://product-service-716746262210.europe-west3.run.app,ORDER_SERVICE_URL=https://order-service-716746262210.europe-west3.run.app"
+#            --project=${{ secrets.GCP_PROJECT_ID }}
+#
+#      - name: Set image in deployment (Rolling Update)
+#        run: |
+#          kubectl set image deployment/user-service user=${{ env.REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+#
+
 
 
