--- a/app/microservices/user/src/main/resources/application-docker.properties
+++ b/app/microservices/user/src/main/resources/application-docker.properties
@@ -1,4 +1,4 @@
-spring.application.name=User
+spring.application.name=user
 server.port=8081
 
 spring.datasource.url=${SPRING_DATASOURCE_URL}
@@ -11,3 +11,8 @@ order.service.url=${ORDER_SERVICE_URL:http://localhost:8083}
 # Let Spring retry on startup and wait for the db
 #spring.sql.init.mode=never
 spring.datasource.hikari.initialization-fail-timeout=-1
+
+
+# Use Docker Compose service name as hostname
+spring.data.redis.host=redis
+spring.data.redis.port=6379
