--- a/app/microservices/user/src/main/resources/application-local.properties
+++ b/app/microservices/user/src/main/resources/application-local.properties
@@ -1,4 +1,4 @@
-spring.application.name=User
+spring.application.name=user
 server.port=8081
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/user_service_db
@@ -8,3 +8,7 @@ spring.datasource.password=master
 
 product.service.url=http://localhost:8082
 order.service.url=http://localhost:8083
+
+
+spring.data.redis.host=127.0.0.1
+spring.data.redis.port=6379
