--- a/app/microservices/user/src/main/resources/application.properties
+++ b/app/microservices/user/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=User
+spring.application.name=user
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -8,3 +8,12 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 management.endpoints.web.exposure.include=health,info,readiness
 management.endpoint.health.probes.enabled=true
 management.health.readinessState.enabled=true
+
+spring.cache.type=redis
+
+# Default host/port (can be overridden)
+spring.data.redis.host=127.0.0.1
+spring.data.redis.port=6379
+
+logging.level.org.springframework.cache=DEBUG
+logging.level.org.springframework.cache.interceptor.CacheInterceptor=DEBUG
