--- a/app/microservices/product/src/test/resources/application-test.properties
+++ b/app/microservices/product/src/test/resources/application-test.properties
@@ -1,4 +1,4 @@
-spring.application.name=Product
+spring.application.name=product
 server.port=8082
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/product_service_db
