--- a/app/microservices/user/build.gradle
+++ b/app/microservices/user/build.gradle
@@ -36,7 +36,10 @@ dependencies {
 	implementation 'com.google.cloud.sql:postgres-socket-factory:1.25.0'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	implementation 'org.springframework.boot:spring-boot-starter-cache'
+	// Optional: for configuration properties
+	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	//implementation project(':common')
 }
 
