--- a/app/microservices/user/src/test/resources/application-test.properties
+++ b/app/microservices/user/src/test/resources/application-test.properties
@@ -1,4 +1,4 @@
-spring.application.name=User
+spring.application.name=user
 server.port=8081
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/user_service_db
