Workflow update 1.0.2 - integrating Redis, deploy user service

--- a/app/microservices/user/src/main/resources/application-cloud.properties
+++ b/app/microservices/user/src/main/resources/application-cloud.properties
@@ -12,7 +12,7 @@ order.service.url=${ORDER_SERVICE_URL:https://order-service-716746262210.europe-
 #spring.sql.init.mode=never
 spring.datasource.hikari.initialization-fail-timeout=-1
 
-
-spring.data.redis.url=${REDIS_URL}
-#spring.data.redis.port=${REDIS_PORT:6379}
-spring.data.redis.password=${REDIS_PASSWORD}
+spring.data.redis.url=${SPRING_REDIS_URL}
+#spring.data.redis.url=${REDIS_URL}
+##spring.data.redis.port=${REDIS_PORT:6379}
+#spring.data.redis.password=${REDIS_PASSWORD}
