--- a/app/microservices/product/src/main/resources/application-local.properties
+++ b/app/microservices/product/src/main/resources/application-local.properties
@@ -8,3 +8,6 @@ spring.datasource.password=master
 
 user.service.url=http://localhost:8081
 order.service.url=http://localhost:8083
+
+
+spring.kafka.bootstrap-servers=localhost:9092
