--- a/app/microservices/order/build.gradle
+++ b/app/microservices/order/build.gradle
@@ -37,6 +37,10 @@ dependencies {
     implementation 'com.google.cloud.sql:postgres-socket-factory:1.25.0'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8'
 
+    implementation 'org.springframework.kafka:spring-kafka'
+    implementation 'io.projectreactor:reactor-core'
+
+
 }
 
 tasks.named('test') {
