--- a/app/microservices/order/src/main/resources/application-local.properties
+++ b/app/microservices/order/src/main/resources/application-local.properties
@@ -8,3 +8,6 @@ spring.datasource.password=master
 
 user.service.url=http://localhost:8081
 product.service.url=http://localhost:8082
+
+
+spring.kafka.bootstrap-servers=localhost:9092
