--- a/app/microservices/order/src/main/resources/application.properties
+++ b/app/microservices/order/src/main/resources/application.properties
@@ -8,3 +8,25 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # Timeout for web client
 webclient.timeout=2000
 
+# Kafka common configuration
+spring.kafka.consumer.key-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+
+spring.kafka.consumer.properties.spring.deserializer.key.delegate.class=org.apache.kafka.common.serialization.LongDeserializer
+spring.kafka.consumer.properties.spring.deserializer.value.delegate.class=org.springframework.kafka.support.serializer.JsonDeserializer
+
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.LongSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
+spring.kafka.consumer.properties.spring.json.value.default.type=com.example.order.event.OrderUserValidated
+
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
+spring.kafka.consumer.properties.spring.json.use.type.headers=false
+
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.group-id=order-service
+# Map topics to your local event classes
+spring.kafka.consumer.properties.spring.json.type.mapping=\
+order.requested:com.example.order.event.OrderRequested,\
+order.user-validated:com.example.order.event.OrderUserValidated,\
+order.product-validated:com.example.order.event.OrderProductValidated
