--- a/app/microservices/product/build.gradle
+++ b/app/microservices/product/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8'
 
 	//implementation project(':common')
+	implementation 'org.springframework.kafka:spring-kafka'
 
 }
 
