--- a/app/microservices/user/src/main/resources/application-local.properties
+++ b/app/microservices/user/src/main/resources/application-local.properties
@@ -12,3 +12,6 @@ order.service.url=http://localhost:8083
 
 spring.data.redis.host=127.0.0.1
 spring.data.redis.port=6379
+
+
+spring.kafka.bootstrap-servers=localhost:9092
