--- a/app/microservices/user/src/main/resources/application.properties
+++ b/app/microservices/user/src/main/resources/application.properties
@@ -15,5 +15,24 @@ spring.cache.type=redis
 spring.data.redis.host=127.0.0.1
 spring.data.redis.port=6379
 
-logging.level.org.springframework.cache=DEBUG
-logging.level.org.springframework.cache.interceptor.CacheInterceptor=DEBUG
+#logging.level.org.springframework.cache=DEBUG
+#logging.level.org.springframework.cache.interceptor.CacheInterceptor=DEBUG
+
+
+# Kafka Configuration
+spring.kafka.consumer.group-id=user-service
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+
+spring.kafka.consumer.properties.spring.deserializer.key.delegate.class=org.apache.kafka.common.serialization.LongDeserializer
+spring.kafka.consumer.properties.spring.deserializer.value.delegate.class=org.springframework.kafka.support.serializer.JsonDeserializer
+
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.LongSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
+spring.kafka.consumer.properties.spring.json.use.type.headers=false
+spring.kafka.consumer.properties.spring.json.value.default.type=com.example.user.event.OrderRequested
+
+
