--- a/app/microservices/order/src/main/resources/application.properties
+++ b/app/microservices/order/src/main/resources/application.properties
@@ -9,24 +9,32 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 webclient.timeout=2000
 
 # Kafka common configuration
+# Delegate to actual deserializers
 spring.kafka.consumer.key-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
 
-spring.kafka.consumer.properties.spring.deserializer.key.delegate.class=org.apache.kafka.common.serialization.LongDeserializer
+# Wrap deserializers so bad records don?t crash the listener
+spring.kafka.consumer.properties.spring.deserializer.key.delegate.class=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.properties.spring.deserializer.value.delegate.class=org.springframework.kafka.support.serializer.JsonDeserializer
 
-spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.LongSerializer
-spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+#spring.kafka.consumer.properties.spring.json.value.default.type=com.example.order.event.OrderUserValidated
 
-spring.kafka.consumer.properties.spring.json.value.default.type=com.example.order.event.OrderUserValidated
-
+# Trust your own packages
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
+# Don?t use type headers from the producer
 spring.kafka.consumer.properties.spring.json.use.type.headers=false
-
+# Consumer group & offset reset
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.group-id=order-service
 # Map topics to your local event classes
-spring.kafka.consumer.properties.spring.json.type.mapping=\
-order.requested:com.example.order.event.OrderRequested,\
-order.user-validated:com.example.order.event.OrderUserValidated,\
-order.product-validated:com.example.order.event.OrderProductValidated
+#spring.kafka.consumer.properties.spring.json.type.mapping=\
+#order.requested:com.example.order.event.OrderRequested,\
+#order.user-validated:com.example.order.event.OrderUserValidated,\
+#order.product-validated:com.example.order.event.OrderProductValidated
+
+#spring.kafka.consumer.properties.spring.json.type.mapping=order.requested:com.example.order.event.OrderRequested,order.user-validated:com.example.order.event.OrderUserValidated,order.product-validated:com.example.order.event.OrderProductValidated
+# ------------ Kafka Producer Configuration ------------
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
+
