Kafka integration 1.0.2 - docker

--- a/app/microservices/order/src/main/resources/application-docker.properties
+++ b/app/microservices/order/src/main/resources/application-docker.properties
@@ -11,3 +11,5 @@ product.service.url=${PRODUCT_SERVICE_URL:http://localhost:8082}
 # Let Spring retry on startup and wait for the db
 #spring.sql.init.mode=never
 spring.datasource.hikari.initialization-fail-timeout=-1
+
+spring.kafka.bootstrap-servers=kafka:9092
