--- a/app/microservices/product/src/main/resources/application-docker.properties
+++ b/app/microservices/product/src/main/resources/application-docker.properties
@@ -11,3 +11,5 @@ order.service.url=${ORDER_SERVICE_URL:http://localhost:8083}
 # Let Spring retry on startup and wait for the db
 #spring.sql.init.mode=never
 spring.datasource.hikari.initialization-fail-timeout=-1
+
+spring.kafka.bootstrap-servers=kafka:9092
