--- a/app/microservices/user/src/main/resources/application-docker.properties
+++ b/app/microservices/user/src/main/resources/application-docker.properties
@@ -16,3 +16,5 @@ spring.datasource.hikari.initialization-fail-timeout=-1
 # Use Docker Compose service name as hostname
 spring.data.redis.host=redis
 spring.data.redis.port=6379
+
+spring.kafka.bootstrap-servers=kafka:9092
