--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -56,6 +56,7 @@ services:
             dockerfile: Dockerfile
         container_name: user-service
         depends_on:
+            - kafka
             - user-db
             - redis
         environment:
@@ -76,6 +77,7 @@ services:
             dockerfile: Dockerfile
         container_name: product-service
         depends_on:
+            - kafka
             - product-db
         environment:
             SPRING_DATASOURCE_URL: jdbc:postgresql://${PRODUCT_DB_HOST}:${PRODUCT_DB_PORT}/${PRODUCT_DB}
@@ -95,6 +97,7 @@ services:
             dockerfile: Dockerfile
         container_name: order-service
         depends_on:
+            - kafka
             - order-db
         environment:
             SPRING_DATASOURCE_URL: jdbc:postgresql://${ORDER_DB_HOST}:${ORDER_DB_PORT}/${ORDER_DB}
@@ -114,3 +117,22 @@ services:
         ports:
             - "6379:6379"
 
+    zookeeper:
+        image: confluentinc/cp-zookeeper:latest
+        environment:
+            ZOOKEEPER_CLIENT_PORT: 2181
+            ZOOKEEPER_TICK_TIME: 2000
+
+    kafka:
+        image: confluentinc/cp-kafka:latest
+        depends_on:
+            - zookeeper
+        ports:
+            - "9092:9092"
+        environment:
+            KAFKA_BROKER_ID: 1
+            KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+            KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+            KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
+            KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+            KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
