--- a/app/microservices/order/src/main/resources/application-cloud.properties
+++ b/app/microservices/order/src/main/resources/application-cloud.properties
@@ -6,7 +6,7 @@ spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 user.service.url=${USER_SERVICE_URL:https://user-service-716746262210.europe-west3.run.app}
-product.service.url=${PRODUCT_SERVICE_URL:https://product-service-xyz.a.run.app}
+product.service.url=${PRODUCT_SERVICE_URL:https://product-service-716746262210.europe-west3.run.app}
 
 # Let Spring retry on startup and wait for the db
 #spring.sql.init.mode=never
