--- a/app/microservices/order/src/test/resources/application-test.properties
+++ b/app/microservices/order/src/test/resources/application-test.properties
@@ -17,6 +17,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-
+spring.kafka.bootstrap-servers=localhost:9092
 
 
