Kafka integration 1.0.5 - workflow update - deploy order service

--- a/app/microservices/order/src/test/resources/application-test.properties
+++ b/app/microservices/order/src/test/resources/application-test.properties
@@ -18,5 +18,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.enabled=false
+spring.kafka.listener.enabled=false
 
 
