Kafka integration 1.0.6 - workflow update - deploy order service

--- a/app/microservices/order/src/main/resources/application-cloud.properties
+++ b/app/microservices/order/src/main/resources/application-cloud.properties
@@ -11,3 +11,7 @@ product.service.url=${PRODUCT_SERVICE_URL:https://product-service-716746262210.e
 # Let Spring retry on startup and wait for the db
 #spring.sql.init.mode=never
 spring.datasource.hikari.initialization-fail-timeout=-1
+
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.enabled=false
+spring.kafka.listener.enabled=false
